Fix colours on mobile nav bar

--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -151,6 +151,7 @@
           width: 100%;
           margin: 0;
           display: block;
+          background-color: #5c47ff;
         }
       }
     }
